Version 0.3.8+
	* Improve speed of k-nearest neighbour (10x on scikits-learn benchmark)
	* Fix gridminize for low count labels
	* Improve kmeans on newer numpy (works for larger datasets)

Version 0.3.8 2011-02-12 luispedro
	* Fix compilation on Windows

Version 0.3.7 2011-02-10 luispedro
	* Logistic regression
	* Source demos included (in source and documentation)
	* Add cluster agreement metrics
	* Fix nfoldcrossvalidation bug when using origins

Version 0.3.6 2010-12-17 luispedro
	* Unsupervised (1-class) kernel density modeling
	* Fix for when SDA returns empty
	* weights option to some learners
	* stump learner
	* Adaboost (result of above changes)

Version 0.3.5 2010-11-3
	* Fixes for 64 bit machines.
	* Functions in measures.py all have same interface now.

Version 0.3.4 2010-10-31
	* Random forest learners
	* Decision trees sped up 20x
	* Much faster gridsearch  (finds optimum without computing all folds)

Version 0.3.3 2010-10-22
	* Missing file added to distribution

Version 0.3.2
	* kmeans() for distance=mahalanobis
	* minimise dependency on scipy
	* self-organising maps
	* important bug fix in repeated_kmeans
	* faster feature selection

Version 0.3.1 2010-09-25
	* fix sparse non-negative matrix factorisation
	* mean grouped classifier
	* update multi classifier to newer interface

Version 0.3 2010-09-23
	* no scipy.weave dependency
	* flatter namespace
	* faster kmeans
	* affinity propagation (borrowed from scikits-learn & slightly improved)
	* pdist()
